2011-07-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Complete CFTimeZoneCreateWithName().
	* Source/CFString.c: Fix a few bugs.
	* Source/CFStringUtilities.c: Fix compare bug.

2011-07-15 10:57  David Chisnall <theraven@gna.org>

	* libs/corebase/trunk/Source/CFBundle.m,
	* libs/corebase/trunk/Source/GNUmakefile: Define RTLD_DEFAULT on
	  systems where it isn't defined (stupid glibc headers).
	  Remove -luuid, since it seems not to be required anymore.

2011-07-15 10:52  David Chisnall <theraven@gna.org>

	* libs/corebase/trunk/Source/objc_interface.h: Include a file that
	  actually exists, instead of one that might exist.

2011-07-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime.m:
	* Source/CFTimeZone.c:
	* Headers/CoreFoundation/CFTimeZone.h: Added new CFTimeZone type base on
	ICU's zoneinfo64 resource bundle.

2011-07-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c:
	* Source/CFDate.c: Added most time utility functions.

2011-07-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Added CFCalendarGetTimeRangeOfUnit().

2011-07-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Implemented CFCalendarGetComponentDifference().

2011-07-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Implemented CFCalendarAddComponents() and
	CFCalendarDecomposeAbsoluteTime().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c: Implemented a few more functions.
	* Source/CFString.c: Fixed bug in CFStringPad().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Fixed string hashing and implemented
	CFStringGetRangeOfComposedCharactersAtIndex().

2011-07-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h:
	* Source/CFRuntime.m: Add bridging function.
	* Source/CFString.c: Bridge NSCFString with CFString types.

2011-07-09 Stefan Bidigaray <stefanbidi@gmail.com>
